@@ -91,11 +91,13 @@ internal static class SrdAndHouseRulesContext
         ConditionDefinitions.ConditionConjuredItemLink.silentWhenRemoved = true;
         ConditionDefinitions.ConditionConjuredItemLink.GuiPresentation.hidden = true;
 
+        //SETTING: modify normal vision range
+        SenseNormalVision.senseRange = Main.Settings.IncreaseSenseNormalVision;
+
         AllowTargetingSelectionWhenCastingChainLightningSpell();
         ApplyConditionBlindedShouldNotAllowOpportunityAttack();
         ApplySrdWeightToFoodRations();
         BuildConjureElementalInvisibleStalker();
-        SenseNormalVision.senseRange = Main.Settings.IncreaseSenseNormalVision;
         LoadAfterRestIdentify();
     }
 
@@ -106,6 +108,7 @@ internal static class SrdAndHouseRulesContext
         FixMeleeHitEffectsRange();
         FixMountaineerBonusShoveRestrictions();
         FixRecklessAttackForReachWeapons();
+        FixStunningStrikeForAnyMonkWeapon();
         SpellsMinorFixes();
         AddBleedingToRestoration();
         SwitchFilterOnHideousLaughter();
@@ -243,6 +246,15 @@ internal static class SrdAndHouseRulesContext
     {
         FeatureDefinitionCombatAffinitys.CombatAffinityReckless
             .situationalContext = (SituationalContext)ExtraSituationalContext.MainWeaponIsMeleeOrUnarmed;
+    }
+
+    /**
+     * Makes `Stunning Strike` context check if any monk weapon instead on OnAttackMeleeHitAuto
+     * Required for it to work with monk weapon specialization and/or way of distant hand.
+     */
+    private static void FixStunningStrikeForAnyMonkWeapon()
+    {
+        FeatureDefinitionPowers.PowerMonkStunningStrike.activationTime = ActivationTime.OnAttackHitAuto;
     }
 
     internal static void ApplyConditionBlindedShouldNotAllowOpportunityAttack()
@@ -539,7 +551,6 @@ internal static class SrdAndHouseRulesContext
             }
         }
     }
-
 
     private static void FixMartialArtsProgression()
     {
